--- a/app/package.json
+++ b/app/package.json
@@ -24,15 +24,20 @@
     "@heroui/theme": "2.4.12",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.20",
+    "@react-input/mask": "^2.0.4",
+    "axios": "^1.9.0",
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
     "lucide-react": "^0.482.0",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.1",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
