--- a/app/package.json
+++ b/app/package.json
@@ -38,7 +38,8 @@
     "react-countdown": "^2.3.6",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.1",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.0.4",
